--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^6.3.1",
+    "ipfs-http-client": "^56.0.2",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
