--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
+    "ethers": "^5.6.4",
+    "ethers-utils": "^2.1.11",
     "framer-motion": "^6.3.1",
     "ipfs-http-client": "^56.0.2",
     "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "next-auth": "^4.3.3",
+    "react": "^18.0.0",
+    "react-dom": "18.0.0",
+    "siwe": "^1.1.6",
+    "wagmi": "^0.2.28"
   },
   "devDependencies": {
+    "@types/react": "^18.0.6",
     "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
