deployaed contract on testnet

--- a/retro/package.json
+++ b/retro/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
