--- a/retro/package.json
+++ b/retro/package.json
@@ -17,9 +17,11 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
+    "@superfluid-finance/ethereum-contracts": "^1.1.1",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.4"
+    "ethers": "^5.6.4",
+    "superfluid": "^0.0.11"
   }
 }
