--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
     "ethers-utils": "^2.1.11",
     "framer-motion": "^6.3.1",
+    "fs": "^0.0.1-security",
     "ipfs-http-client": "^56.0.2",
     "next": "12.1.5",
     "next-auth": "^4.3.3",
