--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
     "ethers-utils": "^2.1.11",
@@ -19,6 +20,7 @@
     "next": "12.1.5",
     "next-auth": "^4.3.3",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "18.0.0",
     "siwe": "^1.1.6",
     "wagmi": "^0.2.28"
