--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
+    "chartjs": "^0.3.24",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
     "ethers-utils": "^2.1.11",
@@ -23,6 +24,7 @@
     "react-chartjs-2": "^4.1.0",
     "react-dom": "18.0.0",
     "siwe": "^1.1.6",
+    "typescript": "^4.6.3",
     "wagmi": "^0.2.28"
   },
   "devDependencies": {
