--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "dotenv": "^16.0.0",
+    "ethers": "^5.5.1",
     "framer-motion": "^6.3.1",
     "ipfs-http-client": "^56.0.2",
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "18.0.0",
     "siwe": "^1.1.6"
   },
