--- a/retro/.env
+++ b/retro/.env
@@ -3,7 +3,7 @@ API_KOVAN= "https://optimism-kovan.infura.io/v3/dd3f65755141452db7b13a0632caddd3
 PRIVATE_KEY_MAIN = ''
 PRIVATE_KEY_KOVAN = ''
 PRIVATE_KEY_LOCAL=''
-ETHERSCAN_API_KEY="3FUXHQBUZZAYKRA8F3YND79WJFPWMW2N3T"
+ETHERSCAN_API_KEY=""
 PRIVATE_KEY_1 = ""
 PRIVATE_KEY_2 = ""
 PRIVATE_KEY_3 = ""
