--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react": "18.0.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "18.0.0",
-    "siwe": "^1.1.6"
+    "siwe": "^1.1.6",
+    "wagmi": "^0.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
